tests/invalid/loops/out_of_scope_do_while.rs
/*
fail: 1
*/

main(): int {
    do {
        a: int = 2;
    } while (a);
    return 0;
}